checks database schema and resets it in case of errors

BUG: 404458